--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/_Imports.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/_Imports.razor
@@ -15,3 +15,4 @@
 @using E_Commerce.UseCase.Products
 @using E_CommerceStore.WebApp.Components.Component
 @using E_Commerce.UseCase.Products.InMemoryTest.InterfaceTest
+@using Microsoft.AspNetCore.Components.Authorization
