--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Home.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Home.razor
@@ -1,7 +1,15 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<div class="landing-page">
+    <div>
+    </div>
+</div>
 
-<h1>Hello, world!</h1>
+<section class="products-bar">
+</section>
 
-Welcome to your new app.
+<section class="products-bar">
+</section>
+
+<section class="products-bar">
+</section>
