--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/App.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/App.razor
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="E-CommerceStore.WebApp.styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
