--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Component/ComponentCreatePoUp.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Component/ComponentCreatePoUp.razor
@@ -1,5 +1,4 @@
-﻿
-@rendermode InteractiveServer
+﻿@rendermode InteractiveServer
 
 <div class="modal fade show" id="myModal" style="display:block; background-color: rgba(10,10,10,.8);" aria-modal="true" role="dialog">
     <div class="modal-dialog">
