--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Layout/Header.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Layout/Header.razor
@@ -1,27 +1,32 @@
-﻿<header style="background-color: #8972C2;">
+﻿<header style="background-color: #8972C2; width: 100%;">
     <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-        <nav class="navbar navbar-expand">
-            <div class="navbar-nav">
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link text-white" href="" Match="NavLinkMatch.All">
-                        <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
-                    </NavLink>
-                </div>
+                <nav class="navbar d-flex justify-content-between align-items-center" style="width: 100%; padding: 10px;">
+            
+            <div class="logo-container" style="flex: 0 1 auto;">
+                <img src="assets/logo.png" alt="Logo" style="height: 40px; width: 200px; object-fit: cover;" />
+            </div>
+            
+            <div class="search-container" style="flex: 1; display: flex; justify-content: center;">
+                <input class="header-searchbar" type="text" placeholder="Search for products..." />
+            </div>
+            
+            <div class="icons-container d-flex align-items-center"> 
+            <a href="/account">
+                <img src="assets/account.png" class="header-icons" alt="Account" />
+            </a>
 
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link text-white" href="counter">
-                        <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Counter
-                    </NavLink>
-                </div>
+            <a href="/cart">
+                <img src="assets/cart.png" class="header-icons" alt="Cart" />
+            </a>
+            </div>
 
-                <div class="nav-item px-3">
+               <!--
+                <div>
                     <NavLink class="nav-link text-white" href="Inventory">
                         <span class="bi bi-list-nested" aria-hidden="true"></span> Inventory
                     </NavLink>
-                </div>
-                <input class="header-searchbar" type="text" placeholder="Search for products..."/>
-                <!--atbind="searchQuery" after type="text" when initalizing-->
-            </div>
+                 </div>  -->
+               
         </nav>
     </div>
 </header>
