--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Layout/MainLayout.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Layout/MainLayout.razor
@@ -4,9 +4,9 @@
 
 <div class="page">
     <main>
-        <article class="content px-4">
+        <div>
             @Body
-        </article>
+        </div>
     </main>
 </div>
 
