--- a/E-CommerceStore/E-CommerceStore.WebApp/wwwroot/app.css
+++ b/E-CommerceStore/E-CommerceStore.WebApp/wwwroot/app.css
@@ -1,5 +1,6 @@
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
+    overflow-x: hidden;  
 }
 
 a, .btn-link {
@@ -34,22 +35,59 @@ h1:focus {
     color: white;
 }
 
-    .blazor-error-boundary::after {
-        content: "An error has occurred."
-    }
+.blazor-error-boundary::after 
+{
+content: "An error has occurred."
+}
 
 .header-searchbar {
     width: 600px;
+    height: 35px;
     border: 0.5px solid #222222;
     border-radius: 10px;
-    background-color: rgba(34, 34, 34, 0.3);
-    font-size: 16px;
+    background-color: rgba(164, 155, 212, 0.3);
+    font-size: 18px;
+    font-weight: 500;
     outline: none;
     border: none;
     text-align: center;
 }
 
-.header-searchbar::placeholder {
-color: #222222;
+.header-searchbar::placeholder 
+{
+color: rgba(10, 17, 24, 0.3);
 }
 
+.header-icons 
+{
+    height: 30px; object-fit: cover; opacity: 0.6;
+}
+
+.icons-container 
+{
+    display: flex;
+    align-items: center;
+    gap: 40px; 
+    margin-right: 30px; 
+}
+
+.landing-page {
+    position: relative;
+    width: 110%;
+    height: 100vh;
+    background-image: url('assets/landing-bg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.products-bar {
+    width: 100%;
+    height: 200px;
+    background-color: #A49BD4;
+    margin-bottom: 75px;
+    margin-top: 75px;
+}
