--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Account/Login.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Account/Login.razor
@@ -4,13 +4,15 @@
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Authentication.Cookies
-@inject IGetAccountDetailUseCase GetAccountDetailUseCase
+@inject IAccountsService GetAccountDetailUseCase
 @inject NavigationManager NavigationManager
+
 <h3>Login</h3>
 <div class="row">
     <div class="col-lg-4 offset-lg-4 pt-4 pb-4 border">
     <EditForm Model="@Model" OnValidSubmit="Authenicate" FormName="LoginForm">
         <DataAnnotationsValidator/>
+            <ValidationSummary />
 
         <div class="mb-3 text-center flex-column">
             
