--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/_Imports.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/_Imports.razor
@@ -16,3 +16,4 @@
 @using E_CommerceStore.WebApp.Components.Component
 @using E_Commerce.UseCase.Products.InMemoryTest.InterfaceTest
 @using Microsoft.AspNetCore.Components.Authorization
+@using E_CommerceStore.WebApp.Components.Component.ViewModel
