landing page frontend
(ALMOST COMPLETE)

--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Layout/MainLayout.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Layout/MainLayout.razor
@@ -10,6 +10,8 @@
     </main>
 </div>
 
+<Footer/>
+
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
