--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Home.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Home.razor
@@ -2,14 +2,192 @@
 
 <div class="landing-page">
     <div>
+         <div class="overlay-content">
+        <div class="title">EXPLORE OUR</div>
+        <div class="subtitle">BROAD SELECTION OF ELECTRONICS</div>
+    </div>
+
+    <div class="promotion-text">
+        <b>-5% DISCOUNT</b> ON ALL ORDERS BEFORE 31.12.2024 <br />
+        USE CODE <b>“NEW YEAR</b>
+    </div>
     </div>
 </div>
 
-<section class="products-bar">
+<div class="landing-bg-container">
+ <div class="spacer"/>
+
+<section class="products-bars">
+    
+    <div class="products-block3">
+        <div class="products-thumbnail3">
+            <div class="thumbnail">OUR BESTSELLERS</div>
+        </div>
+        
+        <div class="item-container">
+            <div class="item-image">
+
+            </div>
+            <div class="item-info">
+                <div class="item-name">
+
+                </div>
+                <div class="item-price">
+
+                </div>
+            </div>
+        </div>
+        <div class="item-container">
+            <div class="item-image">
+            </div>
+            <div class="item-info">
+                <div class="item-name">
+                </div>
+                <div class="item-price">
+                </div>
+            </div>
+        </div>
+        <div class="item-container">
+            <div class="item-image">
+            </div>
+            <div class="item-info">
+                <div class="item-name">
+                </div>
+                <div class="item-price">
+                </div>
+            </div>
+        </div>
+        <div class="item-container">
+            <div class="item-image">
+            </div>
+            <div class="item-info">
+                <div class="item-name">
+                    GAMING MOUSE
+                </div>
+                <div class="item-price">
+                    420$
+                </div>
+            </div>
+        </div>
+    </div>
+
 </section>
 
-<section class="products-bar">
+ <div class="spacer"/>
+
+<section class="products-bars">
+
+    <div class="products-block">
+        
+        <div class="products-thumbnail">
+            <div class="thumbnail">KEYBOARDS</div>
+        </div>
+
+        <div class="item-container">
+            <div class="item-image">
+
+            </div>
+            <div class="item-info">
+                <div class="item-name">
+                    GAMING MOUSE
+                </div>
+                <div class="item-price">
+                    420$
+                </div>
+            </div>
+        </div>
+
+    </div>
 </section>
 
-<section class="products-bar">
+ <div class="spacer"/>
+
+<section class="products-bars">
+
+    <div class="products-block2">
+        <div class="products-thumbnail2">
+            <div class="thumbnail">GAMING</div>
+        </div>
+
+        <div class="item-container">
+            <div class="item-image">
+            </div>
+            <div class="item-info">
+                <div class="item-name">
+                    GAMING MOUSE
+                </div>
+                <div class="item-price">
+                    420$
+                </div>
+            </div>
+        </div>
+        
+        <div class="item-container">
+            <div class="item-image">
+            </div>
+            <div class="item-info">
+                <div class="item-name">
+                </div>
+                <div class="item-price">
+                </div>
+            </div>
+        </div>
+
+        <div class="item-container">
+            <div class="item-image">
+            </div>
+            <div class="item-info">
+                <div class="item-name">
+                </div>
+                <div class="item-price">
+                </div>
+            </div>
+        </div>
+
+        <div class="item-container">
+            <div class="item-image">
+            </div>
+            <div class="item-info">
+                <div class="item-name">
+                </div>
+                <div class="item-price">
+                </div>
+            </div>
+        </div>
+
+        <div class="item-container">
+            <div class="item-image">
+            </div>
+            <div class="item-info">
+                <div class="item-name">
+                </div>
+                <div class="item-price">
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+
+ <div class="spacer"/>
+
+
+<section class="ad-section">
+    <div class="ad-photo">
+        <img src="assets/landingpage-desk.png"/>
+    </div>
+    <div class="ad-text-rectangle">
+        <div class="ad-text">
+            With our broad selection of premium gaming accessories, you can build the ultimate setup for unmatched comfort and performance. 
+            From high-quality headphones and responsive keyboards to precise mice and vibrant monitors, 
+            we have everything you need to elevate your gaming experience. 
+            Discover gear that brings out your best in every game!
+        </div>
+    </div>
+</section>
+
+ <div class="spacer"/>
+ </div>
+
+
+
+
