--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountManagement.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountManagement.razor
@@ -1,6 +1,7 @@
 ﻿@page "/AccountManagement"
 @rendermode InteractiveServer
-
+@attribute [StreamRendering]
+@attribute [Authorize(Roles = "Admin")]
 <h1>Account Management</h1>
 @inject IAccountsService AccountsService
 @inject NavigationManager NavigationManager
