--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/_Imports.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/_Imports.razor
@@ -18,3 +18,4 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using E_CommerceStore.WebApp.Components.Component.ViewModel
 @using ECommerce.CoreEntityBusiness;
+@using Microsoft.AspNetCore.Authorization
