--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Counter.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Counter.razor
@@ -1,6 +1,6 @@
 ﻿@page "/counter"
 @rendermode InteractiveServer
-
+@attribute [Authorize(Roles = "Admin,User")]
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
