+ electronics showcase photo
title

--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Home.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Home.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 
 <div class="landing-page">
+        <img class="electronicsshowcase" src="assets/electronicsshowcase.png" />
     <div>
          <div class="overlay-content">
         <div class="title">EXPLORE OUR</div>
