--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Layout/Header.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Layout/Header.razor
@@ -10,8 +10,8 @@
                 <input class="header-searchbar" type="text" placeholder="Search for products..." />
             </div>
             
-            <div class="icons-container d-flex align-items-center"> 
-            <a href="/account">
+            <div class="icons-container d-flex align-items-center">
+                <a href="/login">
                 <img src="assets/account.png" class="header-icons" alt="Account" />
             </a>
 
